fixed Read More blog , updated authnavbar UI , fixed alignments , added space for adsense , added support for adsense

--- a/client/src/input.css
+++ b/client/src/input.css
@@ -14,7 +14,7 @@ body {
 
 @layer base {
     h3{
-        @apply mb-8 text-4xl font-bold text-darkGrayishBlue md:text-5xl
+        @apply  text-4xl font-bold text-darkGrayishBlue md:text-5xl
     }
     h5{
         @apply  text-2xl font-bold text-lightBlue md:text-3xl
